Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/JF Joly (jfjoly)
+	owner = group midonet-admins
 [access "refs/for/refs/*"]
 	read = group user/JF Joly (jfjoly)
 	push = group user/JF Joly (jfjoly)
