Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,14 +2,6 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group midonet-admins
-[access "refs/for/refs/*"]
-	read = group user/JF Joly (jfjoly)
-	push = group user/JF Joly (jfjoly)
-	label-Code-Review = -2..+2 group user/JF Joly (jfjoly)
-	label-Verified = -1..+1 group user/JF Joly (jfjoly)
-	rebase = group user/JF Joly (jfjoly)
-	removeReviewer = group user/JF Joly (jfjoly)
-	submit = group user/JF Joly (jfjoly)
 [access "refs/heads/*"]
 	read = group user/JF Joly (jfjoly)
 	create = group user/JF Joly (jfjoly)
@@ -19,3 +11,6 @@
 	push = +force group user/JF Joly (jfjoly)
 	pushTag = group user/JF Joly (jfjoly)
 	pushSignedTag = group user/JF Joly (jfjoly)
+[access "refs/drafts/*"]
+	read = group Anonymous Users
+	push = group Registered Users
