Modify access rules

--- a/project.config
+++ b/project.config
@@ -23,3 +23,6 @@
 [access "refs/drafts/*"]
 	read = group Anonymous Users
 	push = group Registered Users
+[access "refs/publish/*"]
+	read = group Anonymous Users
+	push = group Registered Users
