Modify access rules

--- a/project.config
+++ b/project.config
@@ -17,9 +17,10 @@
 	removeReviewer = group midonet-installers
 	submit = group midonet-installers
 [access "refs/tags/*"]
-	push = +force group user/JF Joly (jfjoly)
-	pushTag = group user/JF Joly (jfjoly)
-	pushSignedTag = group user/JF Joly (jfjoly)
+	pushTag = +force group midonet-installers
+	pushSignedTag = group midonet-installers
+	exclusiveGroupPermissions = pushTag pushSignedTag
+	read = group Anonymous Users
 [access "refs/drafts/*"]
 	read = group Anonymous Users
 	push = group Registered Users
